[gd_scene load_steps=2 format=3 uid="uid://bxg2y3co7mu7s"]

[ext_resource type="Script" path="res://Scripts/Menu/Main Menu.gd" id="1_jndc7"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jndc7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 168.0
offset_bottom = 136.0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Deck Edit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deck Edit"

[node name="Shop" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Shop
"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Deck Edit" to="." method="_on_deck_edit_pressed"]
[connection signal="pressed" from="VBoxContainer/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
